--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -1,7 +1,15 @@
 <h1>Display your Pirate here</h1>
 
+    Name: <%= @pirate.name %><br>
+    Height: <%= @pirate.height %><br>
+    Weight: <%= @pirate.weight %><br>
 
 <h2>Display your first ship here</h2>
-
+    Name: <%= @ships[0].name %><br>
+    Type: <%= @ships[0].type %><br>
+    Booty: <%= @ships[0].booty %><br>
 
 <h2>Display your second ship here</h2>
+    Name: <%= @ships[1].name %><br>
+    Type: <%= @ships[1].type %><br>
+    Booty: <%= @ships[1].booty %><br>
