--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -1,26 +1,26 @@
 <h1>Make your form here</h1>
 <form action = "/pirates" method = "POST">
     <h3>Pirates</h3>
-    <label for="pirate_name">Name</label><br>
+    <label for="pirate_name">Name: </label>
     <input type ="text" name = pirate[name]><br>
-    <label for="pirate_weight">Weight</label><br>
+    <label for="pirate_weight">Weight: </label>
     <input type ="text" name = pirate[weight] ><br>
-    <label for="pirate_height">Height</label><br>
+    <label for="pirate_height">Height: </label>
     <input type ="text" name = pirate[height] ><br>
 
     <h3>Ships</h3>
-    <label for="ship_name_1">Name</label><br>
+    <label for="ship_name_1">Name: </label>
     <input id="ship_name_1" type="text" name = pirate[ships][][name]><br>
-    <label for="ship_type_1">Type</label><br>
+    <label for="ship_type_1">Type: </label>
     <input id="ship_type_1"type ="text" name = pirate[ships][][type]><br>
-    <label for="ship_booty_1">Booty</label><br>
+    <label for="ship_booty_1">Booty: </label>
     <input id="ship_booty_1" type ="text" name = pirate[ships][][booty]><br>
-
-    <label for="ship_name_2">Name</label><br>
+<br>
+    <label for="ship_name_2">Name: </label>
     <input id="ship_name_2" type ="text" name = pirate[ships][][name]><br>
-    <label for="ship_type_2">Type</label><br>
+    <label for="ship_type_2">Type: </label>
     <input id="ship_type_2" type ="text" name = pirate[ships][][type]><br>
-    <label for="ship_booty_2">HeiBootyght</label><br>
+    <label for="ship_booty_2">Booty: </label>
     <input id="ship_booty_2" type ="text" name = pirate[ships][][booty]><br><br>
     <input type = "submit" id= "Submit">
 </form>
